--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "body-parser": "^1.16.1",
     "express": "^4.14.1",
+    "express-ipfilter": "^0.2.1",
     "github": "^8.1.1",
     "node-rsa": "^0.4.2",
     "q": "^1.4.1"
